# piu-piu

./: .bazelrc  .clang-format  .clang-tidy  .envrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  main.py  pyproject.toml  requirements.txt
assets/: BUILD.bazel
assets/images/: BUILD.bazel  house.aseprite  human.aseprite  path-ground.aseprite  tree.aseprite
assets/maps/: objects.tsx  path-ground.tsx  tree.tx  yard.tmx
assets/music/happy-intro/: happy-intro.flp
bazel/: aseprite.bzl  compdb.bzl  data.bzl  flatbuffers.bzl  info.bzl  meta.bzl
bazel/toolchains/: BUILD.bazel
bazel/toolchains/cc/: BUILD.bazel  config.bzl
src/data/: BUILD.bazel  data.cpp  data.fbs  data.hpp  iterator.hpp
src/opendata/: BUILD.bazel  aseprite2meta.py  generate_json_schema.py
src/opendata/models/: BUILD.bazel  aseprite.py  meta.py  model.py
src/packer/: BUILD.bazel  main.cpp  pack.cpp  unpack.cpp
src/piu-piu/: BUILD.bazel  config.hpp  main.cpp  screen.hpp  timer.cpp  timer.hpp
src/sdlxx/: BUILD.bazel  error.cpp  error.hpp  sdlxx.cpp  sdlxx.hpp  wrapper.hpp
src/x/: BUILD.bazel  error.cpp  error.hpp  mmap.cpp  mmap.hpp
