load("@rules_python//python/uv:lock.bzl", "lock")
load("@snailbaron-compilation-database//:compdb.bzl", "compilation_database")

lock(
    name = "requirements",
    srcs = ["pyproject.toml"],
    out = "requirements.txt",
)

compilation_database(
    name = "compdb",
    srcs = [
        "//src/data",
        "//src/packer:pack",
        "//src/piu-piu",
        "//src/sdlxx",
        "//src/x",
    ],
)
