module(name = "piu-piu")

bazel_dep(name = "flatbuffers", version = "25.2.10")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "rapidyaml", version = "0.9.0")
bazel_dep(name = "rules_cc", version = "0.2.12")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

# From snailbaron registry
bazel_dep(name = "snailbaron-compilation-database", version = "0.0.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.14")
python.toolchain(python_version = "3.14")

uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
uv.configure(version = "0.9.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "piu-piu-python-deps",
    python_version = "3.14",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "piu-piu-python-deps")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sdl",
    build_file_content = """\
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-gcwPwX5b8sF1Tuypr5xHp2eJrF790WWzuRy75LkL+3Y=",
    strip_prefix = "SDL3-3.2.24",
    url = "https://github.com/libsdl-org/SDL/releases/download/release-3.2.24/SDL3-3.2.24.tar.gz",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

info_repo = use_repo_rule("//bazel:info.bzl", "info_repo")

info_repo(name = "info")
