module(name = "piu-piu")

bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "flatbuffers", version = "25.2.10")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

# From snailbaron registry
bazel_dep(name = "snailbaron-compilation-database", version = "0.0.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.14")
python.toolchain(python_version = "3.14")

uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
uv.configure(version = "0.9.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "piu-piu-python-deps",
    python_version = "3.14",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "piu-piu-python-deps")

info = use_repo_rule("//bazel:info.bzl", "info")

info(name = "info")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sdl",
    build_file_content = """\
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-gcwPwX5b8sF1Tuypr5xHp2eJrF790WWzuRy75LkL+3Y=",
    strip_prefix = "SDL3-3.2.24",
    url = "https://github.com/libsdl-org/SDL/releases/download/release-3.2.24/SDL3-3.2.24.tar.gz",
)

http_archive(
    name = "llvm",
    build_file_content = 'exports_files(glob(["**"]))',
    integrity = "sha256-YnnXj+7rjoOaOX8LynscBZSXIiTVlSVJZBZlPZucB38=",
    strip_prefix = "LLVM-21.1.5-Linux-X64",
    url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-21.1.5/LLVM-21.1.5-Linux-X64.tar.xz",
)

register_toolchains("//bazel/toolchains:clang")
