load("//bazel:aseprite.bzl", "aseprite_export", "aseprite_export_sheet")
load("//bazel:meta.bzl", "meta_export")

aseprite_files = [
    "house.aseprite",
    "human.aseprite",
    "path-ground.aseprite",
    "tree.aseprite",
]

aseprite_export(
    name = "images",
    srcs = aseprite_files,
)

aseprite_export_sheet(
    name = "sheet",
    srcs = aseprite_files,
    out_json = "sheet.json",
    out_sheet = "sheet.png",
    visibility = ["//visibility:public"],
)

meta_export(
    name = "meta",
    src = "sheet.json",
    visibility = ["//visibility:public"],
)
