toolchain(
    name = "clang",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "//bazel/toolchains/cc:clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
