load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_library")
load("//bazel:flatbuffers.bzl", "fb_header", "fb_python")

fb_header(
    name = "data_header",
    src = "data.fbs",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "data",
    srcs = [
        "data.cpp",
        "iterator.hpp",
    ],
    hdrs = [
        "data.hpp",
        ":data_header",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//src/x",
        "@flatbuffers",
    ],
)

fb_python(
    name = "data_python_files",
    src = "data.fbs",
)

py_library(
    name = "data_py",
    srcs = [":data_python_files"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = ["@piu-piu-python-deps//flatbuffers"],
)
