load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "piu-piu",
    srcs = [
        "config.hpp",
        "main.cpp",
        "timer.cpp",
        "timer.hpp",
    ],
    data = [
        "//assets:data",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/data",
        "//src/sdlxx",
    ],
)
